summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: illegal start of simple expression
  }
  ^Moria:5: error: 'while' expected but '}' found.
}
^