summative.moria.Moria.scala.code
def trouveRocher(){
  do avance() {
    while (!estSurBiscuit || estFaceMur())
  }
}

  
def Sortir() {
  while (!estFaceMur()) {
    retourne()
   	trouveRocher()
    prendBiscuit()
  	retourne()
  	trouveRocher()
  	recule()
  	poseBiscuit()
	}
  droite();avance();droite();avance()
}
